app/app.scss
@use "./mixins.scss" as *;

:root {
  --background-color: #ffffff;
  --foreground-color: #1b1b23;
  --border-color: #c7c5d0;
  --muted-color: #d6d6d6;
  --muted-foreground-color: #626264;

  --chart-1: #4142ef;
  --chart-2: #ff8346;
  --chart-3: #46464f;

  --primary-radius: 4px;

  .dark {
    --background-color: #000027;
    --foreground-color: #ffffff;
    --muted-color: #090935;
    --muted-foreground-color: #d0cfd6;
    --border-color: #30265f;

    --chart-3: #d0d0d6;
  }
}


* {
  box-sizing: border-box;
}

body {
  padding: 0;
  margin: 0;
  color: var(--foreground-color);
  background-color: var(--background-color);
  font-family: "Roboto", sans-serif;
}

button {
  @include input;
}

.flex {
  display: flex;
}

.column {
  flex-direction: column;
}

.row {
  flex-direction: row;
}

.center {
  justify-content: center;
  align-items: center;
}

.space-x > * + * {
  margin-left: 8px;
}

.space-y > * + * {
  margin-top: 8px;
}

.conversions__options {
  display: flex;
  margin-bottom: 40px;

  > * + * {
    margin-left: 8px;
  }
}

.tooltip {
  background-color: var(--background-color);
  font-size: 11px;
}

